# ai-engineer-training

./: .gitignore  pyrightconfig.json
week03-homework/: pyproject.toml
week03-homework/chunking_research/: main.ipynb  report.md
week03-homework/chunking_research/docs/txt/: doc1.txt  doc2.txt  doc3.txt
week03-homework/ocr_research/: image_ocr_reader.py  main.py  report.md
